Bug 42963 - SIGSEGV sp_texture.c:439
Summary: SIGSEGV sp_texture.c:439
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) All
: medium critical
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-15 16:49 UTC by Vinson Lee
Modified: 2011-11-16 14:49 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-11-15 16:49:34 UTC
mesa: 79653c12d6da4d89aaa73e4e8260a84d91f93593 (master)

Run glean depthStencil no softpipe.

$ ./bin/glean -r results -t depthStencil --quick
Mesa: User error: GL_INVALID_ENUM in glDrawPixels(format or type)
Mesa: User error: GL_INVALID_OPERATION in glDrawPixels(format is not GL_DEPTH_STENCIL_EXT)
Mesa: User error: GL_INVALID_ENUM in glReadPixels(format or type)
Mesa: User error: GL_INVALID_OPERATION in glReadPixels(format is not GL_DEPTH_STENCIL_EXT)
Segmentation fault (core dumped)


(gdb) bt
#0  0x00174d32 in softpipe_transfer_unmap (pipe=0x84aa160, transfer=0x0) at sp_texture.c:439
#1  0x002786ab in pipe_transfer_unmap (context=0x84aa160, transfer=0x0) at ../../src/gallium/auxiliary/util/u_inlines.h:398
#2  0x002797dd in st_UnmapRenderbuffer (ctx=0x85a05e8, rb=0x86001f0) at state_tracker/st_cb_fbo.c:704
#3  0x00237571 in slow_read_depth_stencil_pixels_separate (ctx=0x85a05e8, x=0, y=0, width=2, height=2, type=34042, packing=0xbfd0df50, dst=0xbfd0e090 "\002", 
    dstStride=8) at main/readpix.c:427
#4  0x0023774a in read_depth_stencil_pixels (ctx=0x85a05e8, x=0, y=0, width=2, height=2, type=34042, pixels=0xbfd0e080, packing=0xbfd0df50) at main/readpix.c:469
#5  0x002378ee in _mesa_readpixels (ctx=0x85a05e8, x=0, y=0, width=2, height=2, format=34041, type=34042, packing=0x85af090, pixels=0xbfd0e080) at main/readpix.c:508
#6  0x003be7bf in st_readpixels (ctx=0x85a05e8, x=0, y=0, width=2, height=2, format=34041, type=34042, pack=0x85af090, dest=0xbfd0e080)
    at state_tracker/st_cb_readpixels.c:54
#7  0x002382be in _mesa_ReadnPixelsARB (x=0, y=0, width=2, height=2, format=34041, type=34042, bufSize=2147483647, pixels=0xbfd0e080) at main/readpix.c:753
#8  0x0023831d in _mesa_ReadPixels (x=0, y=0, width=2, height=2, format=34041, type=34042, pixels=0xbfd0e080) at main/readpix.c:761
#9  0x080de3f9 in GLEAN::DepthStencilTest::testDrawAndRead (this=0x81bb460) at piglit/tests/glean/tdepthstencil.cpp:201
#10 0x080de81d in GLEAN::DepthStencilTest::runOne (this=0x81bb460, r=..., w=...) at /usr/local/src/piglit/tests/glean/tdepthstencil.cpp:303
#11 0x080dfe56 in GLEAN::BaseTest<GLEAN::DepthStencilResult>::run (this=0x81bb460, environment=...) at piglit/tests/glean/tbase.h:325
#12 0x080bdcb6 in main (argc=7, argv=0xbfd0e364) at piglit/tests/glean/main.cpp:141
(gdb) frame 0
#0  0x00174d32 in softpipe_transfer_unmap (pipe=0x84aa160, transfer=0x0) at sp_texture.c:439
439	   assert(transfer->resource);
(gdb) print transfer
$1 = (struct pipe_transfer *) 0x0


94780b5ee6dc118e22c29b5543c4db8e0ab1f393 is the first bad commit
commit 94780b5ee6dc118e22c29b5543c4db8e0ab1f393
Author: Brian Paul <brianp@vmware.com>
Date:   Mon Nov 14 13:06:29 2011 -0700

    st/mesa: remove most of the ReadPixels code
    
    We can use the core Mesa code for glReadPixels now.  We just have to
    validate state and flush the bitmap cache before reading.

:040000 040000 38787a22454bdc6821b28126fc40cbcc5aa377af 01a48610d6f8bb87bd448ea6fa610a799cb10029 M	src
bisect run success
Comment 1 Vinson Lee 2011-11-15 17:45:51 UTC
The crash occurs with llvmpipe as well.
Comment 2 Brian Paul 2011-11-16 07:59:40 UTC
Fixed with commit f6a50c0b1ff620d1b721968144a56452c0bd6d85
Comment 3 Vinson Lee 2011-11-16 14:49:08 UTC
mesa: f4c03da3276bee39802236c21a0b5a31f05e2541 (master)

Verified fixed. depthStencil passes on softpipe.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.